# rsp-core-library

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  ToolchainFile.txt  version-def.h.in  version.h.in
.github/workflows/: codeql-analysis.yml
cmake/: FindMbedTLS.cmake  WindowsToolchain.cmake  libSDL2pp.cmake  strict-compile-options.cmake
docs/: Core Library Architecture Description.odt  DOC-0055 Core Library Architecture Description.odt  DOC-0056 Core Library Architecture Description.odt
docs/uml/: Config Classes.puml  DataContainer.puml  Event Management Classes.puml  FileSystem Classes.puml  GUI Classes.puml  GUI Control Classes.puml  GUI Font Classes.puml  GUI Primitive Classes.puml  GUI Touch Event Classes.puml  Intended GUI Process Flow.puml  Json Classes.puml  Localization classes.puml  Logging Classes.puml  Network Classes.puml  New Json Classes.puml  Nullable Classes  Security Classes.puml  Touch Handling Classes.puml  classes.puml
include/: CMakeLists.txt  version.h
include/application/: ApplicationBase.h  CliApplication.h  CommandLine.h  Console.h  Exceptions.h
include/compression/: ZLib.h
include/configuration/: Config.h  ConfigLoader.h
include/exceptions/: BackTrace.h  CoreException.h  ExceptionHelper.h  SignalHandler.h  TracedException.h
include/filesystem/: FileIO.h  FileSystem.h
include/graphics/: Bitmap.h  BitmapView.h  BufferedCanvas.h  Button.h  Canvas.h  Color.h  Control.h  EventCreator.h  Font.h  FontRawInterface.h  Framebuffer.h  FramebufferCanvas.h  G2D.h  GfxCache.h  GfxCompressor.h  GfxEngine.h  GfxEvent.h  GfxEvents.h  GfxHal.h  GfxInputEvents.h  GfxResource.h  GraphicsMain.h  GuiUnit.h  Image.h  InputCreator.h  Keyboard.h  Label.h  PixelData.h  Point.h  Rect.h  Renderer.h  Scene.h  SceneLoader.h  SceneMap.h  StaticTextures.h  Style.h  Text.h  Texture.h  TextureMap.h  TouchEvent.h  (+1 more)
include/json/: Json.h  JsonArray.h  JsonDecoder.h  JsonEncoder.h  JsonExceptions.h  JsonObject.h  JsonStream.h  JsonString.h  JsonValue.h  Jsonable.h
include/localization/: ITranslation.h  Translation.h
include/logging/: ConsoleLogWriter.h  FileLogWriter.h  LogChannel.h  LogStream.h  LogTypes.h  LogWriter.h  LogWriterInterface.h  Logger.h  LoggerInterface.h  OutStreamBuffer.h  SetChannel.h  SetContext.h  SetLevel.h  SysLogWriter.h
include/messaging/: Broker.h  BrokerInterface.h  Emitter.h  Event.h  EventBroker.cpp  EventBroker.h  Notifier.h  Publisher.h  Subscriber.h  SubscriberInterface.h
include/network/: ConnectionOptions.h  HttpDownload.h  HttpForm.h  HttpRequest.h  HttpRequestOptions.h  HttpRequestType.h  HttpResponse.h  HttpSession.h  WLan.h  (+9 more)
src/: CMakeLists.txt  library-sources.cmake  version.cpp
tests/: CMakeLists.txt  TestApplication.cpp  TestApplication.h  test-examples.cpp  test-main.cpp
tests/helpers/: GuiHelper.cpp  GuiHelper.h  Overlay.h  TestApplication.cpp  TestApplication.h  TestEngine.h  TestHelpers.cpp  TestHelpers.h  TestLogger.cpp  TestLogger.h  TestPixmap.cpp  TestPixmap.h  TestTouchParser.cpp  TestTouchParser.h
tests/helpers/eventTypes/: ClickedEvent.h
tests/helpers/pixmap/: Background.cpp  BigSpecial.cpp  Erase.cpp  GfxResources.h  Key.cpp  LowerCase.cpp  Monochrome-8x8.cpp  Monochrome.cpp  SmallSpecial.cpp  Space.cpp  TestImage480x800.cpp  UpperCase.cpp
tests/helpers/scenes/: FirstScene.h  InputScene.h  Scene480x800.h  Scenes.h  SecondScene.h
tests/helpers/scripts/: fix-include-guards.sh  start-wpa_supplicant.sh  stop-wpa_supplicant.sh
tests/helpers/testImages/: Monochrome.xcf  binaryTouch  touchTest.txt
tests/integration/: CMakeLists.txt  test-GfxEngine.cpp  test-graphicsmain.cpp  test-touch-events.cpp
tests/unit/: test-version.cpp
tests/unit/application/: test-application.cpp
tests/unit/configuration/: test-Config.cpp
tests/unit/controls/: test-control.cpp  test-image.cpp  test-label.cpp  test-scene.cpp  test-toucharea.cpp
tests/unit/controls/pixmap/: GfxResources.h  Key.cpp  LowerCase.cpp  LowerCase.h  Monochrome-8x8.cpp  Monochrome.cpp  TestImage480x800.h
tests/unit/controls/scenes/: FirstScene.h  Scene480x800.h  SecondScene.h
tests/unit/exceptions/: test-exceptions.cpp
tests/unit/filesystem/: test-fileio.cpp  test-filesystem.cpp
tests/unit/graphics/: test-ConvertPixelData.cpp  test-GfxHal.cpp  test-GfxInputEvents.cpp  test-PixelData.cpp  test-bitmap.cpp  test-color.cpp  test-colour.cpp  test-font.cpp  test-framebuffer.cpp  test-graphicsmain.cpp  test-inputcreator.cpp  test-rect.cpp
tests/unit/graphics/testImages/: testImage.txt
tests/unit/json/: test-json.cpp
tests/unit/localization/: test-Translation.cpp
tests/unit/logging/: test-logger.cpp
tests/unit/messaging/: test-Emitter.cpp  test-EventBroker.cpp  test-Notifier.cpp  test-broker.cpp  test-publisher.cpp  test-pubsub.cpp  test-subscriber.cpp
tests/unit/network/: test-network.cpp  test-wlan.cpp
tests/unit/posix/: test-Socket.cpp  test-fileio.cpp  test-filesystem.cpp
tests/unit/security/: test-Config.cpp  test-SecureBuffer.cpp  test-SecureContainer.cpp  test-Sha.cpp  test-crypt.cpp
tests/unit/utils/: test-AbstractIterator.cpp  test-Average.cpp  test-BinaryStorage.cpp  test-BinaryStream.cpp  test-ConstHash.cpp  test-CsvEncoder.cpp  test-DataContainer.cpp  test-DateTime.cpp  test-EnumFlags.cpp  test-FixedString.cpp  test-HexStream.cpp  test-ObjectPool.cpp  test-PolledTimer.cpp  test-StreamStorage.cpp  test-Thread.cpp  test-Timer.cpp  test-crc32.cpp  test-exceptions.cpp  test-function.cpp  test-insertorderedmap.cpp  test-json.cpp  test-rounding.cpp  test-singleton.cpp  test-stopwatch.cpp  test-structelement.cpp  test-strutils.cpp  test-variant.cpp
tests/webserver/: client-cert.sh  common.inc  generate-certificates.sh  install.sh  lighttpd.conf  lighttpd.conf.in  users.plain
tests/webserver/cgi/: post.sh  upload-form.sh  upload.sh
tests/webserver/public/: index.html
tests/webserver/public/authenticated/: index.html
tests/webserver/ssl/ca/: ca.crt  ca.key  ca.pem  ca.srl
tests/webserver/ssl/certs/: SN1234.crt  SN1234.pem  server.crt  server.pem
tests/webserver/ssl/private/: SN1234.key  server.key
(+393 files in other folders)
